<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/red"
        android:padding="10dp"
        android:text="@string/title"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:textStyle="bold" 
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/id" />

    <EditText
        android:id="@+id/employeeId_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="5dp"
        android:background="@color/purple"
        android:hint="@string/hint_id"
        android:inputType="text"
        android:padding="5dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/name" />

    <EditText
        android:id="@+id/name_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="5dp"
        android:background="@color/purple"
        android:hint="@string/hint_name"
        android:inputType="text"
        android:padding="5dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/designation" />

    <EditText
        android:id="@+id/designation_Edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="5dp"
        android:background="@color/purple"
        android:hint="@string/hint_designation"
        android:inputType="text"
        android:padding="5dp" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:padding="5dp"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/red"
        android:text="@string/login"
        android:textColor="@color/white" 
        android:layout_gravity="center_horizontal"/>

</LinearLayout>